force-app/main/default/objects/QuoteLineItem/fields/Bundle_Price__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price__c</fullName>
    <formula>IF(
  AND(
    ISBLANK(ParentQuoteLineItemId),
    ISPICKVAL(Product2.Type, &quot;Bundle&quot;)
  ),
  PricebookEntry.UnitPrice,
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>