force-app/main/default/objects/QuoteLineItem/fields/Custom_Uplift_Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Uplift_Price_Amount__c</fullName>
    <label>Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>