force-app/main/default/objects/QuoteLineItem/fields/Custom_Uplift_Price_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Custom_Uplift_Price_Percentage__c</fullName>
    <label>Markup Percentage</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>