force-app/main/default/objects/QuoteLineItem/fields/Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Discount__c</fullName>
    <label>Discretionary Discount</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>