force-app/main/default/objects/QuoteLineItem/fields/Estimated_Expense_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Expense_Price__c</fullName>
    <label>Estimated Expense Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>