force-app/main/default/objects/QuoteLineItem/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Consulting Services</fullName>
            </value>
            <value>
                <fullName>Application Solutions</fullName>
            </value>
            <value>
                <fullName>Azure Consumption</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>License Subscription</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Private Cloud</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Service Desk</fullName>
            </value>
            <value>
                <fullName>Snap-On</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
            <value>
                <fullName>Zingly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>