force-app/main/default/objects/QuoteLineItem/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>TEXT(ROUND(Margin * 100, 2)) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Percent</label>
    <type>Text</type>
</CustomField>