force-app/main/default/objects/QuoteLineItem/fields/Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase__c</fullName>
    <formula>CASE(
    TEXT(Product2.Service_Offering__c),
    &quot;Service Desk&quot;, 0.03,
    &quot;Infrastructure&quot;, 0.06,
    &quot;Cybersecurity&quot;, 0.03,
    &quot;Private Cloud&quot;, 0.03,
    &quot;VOIP&quot;, 0.00,
    &quot;Onboarding&quot;, 0.00,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>