force-app/main/default/objects/QuoteLineItem/fields/Total_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Percent__c</fullName>
    <formula>TEXT(ROUND(TotalMargin *100, 2)) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin Percent</label>
    <type>Text</type>
</CustomField>