force-app/main/default/objects/QuoteLineItem/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Controller(s)</fullName>
            </value>
            <value>
                <fullName>Core(s)</fullName>
            </value>
            <value>
                <fullName>Device(s)</fullName>
            </value>
            <value>
                <fullName>Domain(s)</fullName>
            </value>
            <value>
                <fullName>Environment(s)</fullName>
            </value>
            <value>
                <fullName>Hour(s)</fullName>
            </value>
            <value>
                <fullName>Integration(s)</fullName>
            </value>
            <value>
                <fullName>IP(s)</fullName>
            </value>
            <value>
                <fullName>License(s)</fullName>
            </value>
            <value>
                <fullName>Location(s)</fullName>
            </value>
            <value>
                <fullName>Mailbox(s)</fullName>
            </value>
            <value>
                <fullName>Resource(s)</fullName>
            </value>
            <value>
                <fullName>Site(s)</fullName>
            </value>
            <value>
                <fullName>TB(s)</fullName>
            </value>
            <value>
                <fullName>Ticket(s)</fullName>
            </value>
            <value>
                <fullName>User(s)</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>Mbps</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>